test/should-fail/vsgc1488.f3
/*
 * @test/compile-error
 */

import java.lang.System;

public class Server {
    public function run () {
        System.out.println("Implementation 1");
    }
}


var server = Server{
    run: function(){
        System.out.println("Implementation 2");
    }
} 
